--- a/medialog/markdown/resources/markdown.css
+++ b/medialog/markdown/resources/markdown.css
@@ -1,3 +1,5 @@
+/* @override http://localhost:8080/xxx/zdfdfadsf/++resource++medialog.markdown/markdown.css */
+
 /* @override http://localhost:8080/Plone/sdfsafa/++resource++medialog.markdown/markdown.css */
 
 .btn-group {
@@ -33,19 +35,23 @@
 	width: 49% !important;
 	clear: none;
 	display: block;
-	min-height: 500px;
+	height: 700px;
 }
 
 #result {
 	overflow: scroll;
 	float: right;
-	margin-top: 10px;
 	margin-bottom: 5px;
 	border: 1px solid #CCC;
 	padding: 10px;
 	border-radius: 6px;
+	resize: vertical;
 }
 
 .disabled {
 	opacity: 0.4
+}
+
+div.flexbox {
+	height: 500px;
 }
