--- a/medialog/markdown/resources/markdown.css
+++ b/medialog/markdown/resources/markdown.css
@@ -52,3 +52,11 @@
 div.flexbox {
 	height: 500px;
 }
+
+a#you_are_here {
+	font-weight:bold;
+	color:  red;
+	font-size: 2em;
+	display:block;
+	margin-left:  -10pt;
+}
